--- a/frontend/src/lib/components/Popup/Popup.scss
+++ b/frontend/src/lib/components/Popup/Popup.scss
@@ -42,6 +42,7 @@
     align-items: flex-start;
     justify-content: space-between;
     width: 100%;
+    gap: 0.5rem;
     h3 {
         font-size: 1rem;
         font-weight: 600;
