--- a/frontend/src/scenes/insights/InsightTabs/FunnelTab/FunnelStepTable.scss
+++ b/frontend/src/scenes/insights/InsightTabs/FunnelTab/FunnelStepTable.scss
@@ -4,6 +4,7 @@
 .InsightCard {
     .funnel-steps-table {
         margin: 0 !important;
+        flex-grow: 1;
     }
 
     .funnel-bar-wrapper.breakdown.vertical {
