Description and more button rendering

--- a/frontend/src/lib/components/LemonTable/LemonTable.scss
+++ b/frontend/src/lib/components/LemonTable/LemonTable.scss
@@ -47,6 +47,14 @@
         max-width: 30rem;
         font-size: 0.75rem;
     }
+    .row-description-long {
+        display: inline-block;
+        max-width: 30rem;
+        font-size: 0.75rem;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+    }
 }
 
 .LemonTable__content > table {
