Archive and delete experiments (#8129)
* add archive experiment button and table for archived experiments and non-archived

(cherry picked from commit 73238357055c36685fe4bfb1f618c2c5d38d566a)

* return response instead of reloading experiment again

* delete button

* prettier

* python black

* typescript fix

* delete without undo and fix get results

* experiments backend test

* fix backend test

* prettier

* fix get queryset archived experiments request

* fixes

* prettier

* typescript fixes

--- a/frontend/src/scenes/experiments/Experiment.scss
+++ b/frontend/src/scenes/experiments/Experiment.scss
@@ -135,6 +135,10 @@
         color: white;
     }
 
+    .archive-experiment {
+        color: $danger;
+    }
+
     .description {
         font-style: italic;
         color: $text_muted;
