--- a/frontend/src/lib/components/PropertyFilters/components/FilterRow.scss
+++ b/frontend/src/lib/components/PropertyFilters/components/FilterRow.scss
@@ -37,4 +37,17 @@
     flex-wrap: wrap;
     gap: 0.25rem;
     margin: 0.25rem 0 1rem;
+
+    .pinned-filter {
+        cursor: not-allowed;
+    }
+
+    .property-filter-grey {
+        color: #2d2d2d;
+        border-color: $dark-grey;
+        background: $dark-grey;
+
+        text-shadow: none;
+        box-shadow: none;
+    }
 }
