Fix status style

--- a/frontend/src/lib/components/LemonTag/LemonTag.scss
+++ b/frontend/src/lib/components/LemonTag/LemonTag.scss
@@ -10,6 +10,7 @@
     display: inline;
     color: $text_default;
     line-height: 1rem;
+    white-space: nowrap;
 
     &.warning {
         background-color: $warning;
