--- a/frontend/src/lib/components/InsightCard/InsightCard.scss
+++ b/frontend/src/lib/components/InsightCard/InsightCard.scss
@@ -7,6 +7,7 @@
     flex-direction: column;
     align-items: stretch;
     height: 30rem;
+    max-width: 100%;
     border-radius: var(--radius);
     border: 1px solid var(--border);
     z-index: 3;
@@ -17,6 +18,11 @@
     }
     .InsightMeta {
         border-bottom: 1px solid var(--border);
+    }
+    .ant-alert {
+        margin: 1rem;
+        width: 100%;
+        overflow: auto;
     }
 }
 
