--- a/frontend/src/lib/components/Popup/Popup.scss
+++ b/frontend/src/lib/components/Popup/Popup.scss
@@ -1,18 +1,9 @@
 @import '~/vars';
 
 .Popup {
+    perspective: 80rem;
+    perspective-origin: top;
     z-index: $z_popup;
-    box-shadow: $shadow_popup;
-    background: #fff;
-    padding: 0.5rem;
-    border-radius: var(--radius);
-    border: 1px solid var(--border);
-    max-width: calc(100vw - 1rem);
-    max-height: calc(100vh - 6rem);
-    overflow: auto;
-    &--actionable {
-        border-color: var(--primary);
-    }
     h5 {
         margin: 0.25rem 0.5rem;
     }
@@ -21,11 +12,38 @@
     }
 }
 
+.Popup__box {
+    transition: opacity 100ms ease, transform 100ms ease;
+    transform-origin: top;
+    box-shadow: var(--shadow-elevation);
+    background: #fff;
+    padding: 0.5rem;
+    border-radius: var(--radius);
+    border: 1px solid var(--border);
+    max-width: calc(100vw - 1rem);
+    max-height: calc(100vh - 6rem);
+    overflow: auto;
+    .Popup--actionable & {
+        border-color: var(--primary);
+    }
+    .Popup--enter &,
+    .Popup--exit.Popup--exit-active & {
+        opacity: 0;
+        transform: rotateX(-12deg);
+    }
+    .Popup--enter.Popup--enter-active &,
+    .Popup--exit & {
+        opacity: 1;
+        transform: rotateX(0);
+    }
+}
+
 .PopupHeader {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
     width: 100%;
+    gap: 0.5rem;
     h3 {
         font-size: 1rem;
         font-weight: 600;
