Add "Last modified" to InsightCard

--- a/frontend/src/lib/components/InsightCard/InsightCard.scss
+++ b/frontend/src/lib/components/InsightCard/InsightCard.scss
@@ -111,6 +111,11 @@
     overflow: auto;
 }
 
+.InsightMeta__modification {
+    margin-top: 0.25rem;
+    font-size: 0.8125rem;
+}
+
 .handle {
     display: flex;
     align-items: flex-end;
