--- a/frontend/src/lib/components/ProfilePicture/ProfilePicture.scss
+++ b/frontend/src/lib/components/ProfilePicture/ProfilePicture.scss
@@ -2,7 +2,7 @@
 
 .profile-package {
     display: inline-flex;
-    align-items: baseline;
+    align-items: center;
     margin-left: 0.25rem;
 }
 
