--- a/frontend/src/scenes/insights/Insight.scss
+++ b/frontend/src/scenes/insights/Insight.scss
@@ -47,6 +47,10 @@ $funnel_canvas_background: #fff;
         }
     }
 
+    .LastModified {
+        margin-top: 0.5rem;
+    }
+
     hr {
         margin: 1rem 0;
     }
@@ -234,18 +238,19 @@ $funnel_canvas_background: #fff;
         }
     }
 
-    .insight-metadata-tags {
-        .ant-tag {
-            margin-top: 0 !important;
-        }
-    }
-
     .insights-graph-header {
         margin-top: 0 !important;
         margin-bottom: 0 !important;
         padding-left: $default_spacing;
         padding-right: $default_spacing;
         min-height: 48px;
+    }
+}
+
+.insight-metadata-tags {
+    margin-top: 0.25rem;
+    .ant-tag {
+        margin-top: 0;
     }
 }
 
