--- a/frontend/src/lib/components/PropertyFilters/components/FilterRow.scss
+++ b/frontend/src/lib/components/PropertyFilters/components/FilterRow.scss
@@ -22,6 +22,10 @@
         user-select: none;
     }
 
+    .anticon-close {
+        color: white;
+    }
+
     .property-filter-grey {
         color: #2d2d2d;
         border-color: $dark-grey;
@@ -29,6 +33,10 @@
 
         text-shadow: none;
         box-shadow: none;
+
+        .anticon-close {
+            color: #2d2d2d;
+        }
     }
 }
 
