--- a/frontend/src/lib/components/PropertyFilters/components/FilterRow.scss
+++ b/frontend/src/lib/components/PropertyFilters/components/FilterRow.scss
@@ -9,6 +9,10 @@
     overflow: hidden;
     flex-basis: 100%;
 
+    &.wrap-filters {
+        flex-basis: auto;
+    }
+
     .property-filter-button-spacing {
         color: #c4c4c4;
         font-size: 18px;
@@ -22,6 +26,10 @@
         user-select: none;
     }
 
+    .white-button {
+        color: white;
+    }
+
     .property-filter-grey {
         color: #2d2d2d;
         border-color: $dark-grey;
@@ -29,6 +37,10 @@
 
         text-shadow: none;
         box-shadow: none;
+
+        .anticon-close {
+            color: #2d2d2d;
+        }
     }
 }
 
