--- a/frontend/src/lib/components/EditableField/EditableField.scss
+++ b/frontend/src/lib/components/EditableField/EditableField.scss
@@ -13,9 +13,11 @@
         flex-direction: row;
         align-items: center;
         width: fit-content;
+        max-width: calc(100% + 0.5rem);
         padding: 0.25rem; // Some padding to give the focus outline more breathing space
         margin: -0.25rem;
         white-space: pre-wrap;
+        overflow: auto;
     }
     &--editing .EditableField--highlight {
         align-items: flex-end;
