--- a/frontend/src/lib/components/LemonRow/LemonRow.scss
+++ b/frontend/src/lib/components/LemonRow/LemonRow.scss
@@ -6,7 +6,7 @@
     flex-direction: column;
     align-items: start;
     justify-content: center;
-    height: 2.5rem;
+    min-height: 2.5rem;
     padding: 0.25rem 1rem;
     background: none;
     border-radius: var(--radius);
@@ -51,10 +51,10 @@
 }
 
 .LemonRow__extended-area {
+    display: flex;
+    flex-direction: column;
     font-size: 0.8125rem;
-    margin-top: -0.3333rem;
-    margin-bottom: 0.5rem;
-    margin-left: 2.5rem;
+    margin-left: 2rem;
 }
 
 .LemonRow--full-width {
@@ -80,12 +80,13 @@
 
 .LemonRow--symbolic {
     display: block;
+    min-height: 1.5rem;
     height: 1.5rem;
     padding: 0;
 }
 
 .LemonRow--compact {
-    height: 2rem;
+    min-height: 2rem;
     padding: 0.125rem 0.5rem;
     &.LemonRow--symbolic {
         height: 1.25rem;
