--- a/frontend/src/scenes/saved-insights/SavedInsights.scss
+++ b/frontend/src/scenes/saved-insights/SavedInsights.scss
@@ -141,7 +141,7 @@
     display: grid;
     grid-gap: 1rem;
     min-height: 30rem;
-    @media screen and (min-width: $lg) {
+    @media screen and (min-width: $xl) {
         grid-template-columns: repeat(3, 1fr);
     }
 }
