Improve saved insights cards grid responsiveness

--- a/frontend/src/scenes/saved-insights/SavedInsights.scss
+++ b/frontend/src/scenes/saved-insights/SavedInsights.scss
@@ -142,6 +142,9 @@
     grid-gap: 1rem;
     min-height: 30rem;
     @media screen and (min-width: $xl) {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    @media screen and (min-width: $xxl) {
         grid-template-columns: repeat(3, 1fr);
     }
 }
