--- a/frontend/src/scenes/saved-insights/SavedInsights.scss
+++ b/frontend/src/scenes/saved-insights/SavedInsights.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
 
-    td {
+    > .LemonTable td {
         padding-bottom: 0.75rem !important;
         padding-top: 0.75rem !important;
     }
