--- a/frontend/src/lib/components/InsightCard/InsightCard.scss
+++ b/frontend/src/lib/components/InsightCard/InsightCard.scss
@@ -275,7 +275,6 @@
     &.SeriesDisplay__raw-name--action,
     &.SeriesDisplay__raw-name--event {
         padding: 0.25rem;
-        margin-left: 0 0 0 0.375rem;
         &::before {
             display: inline-block;
             text-align: center;
@@ -285,6 +284,7 @@
             background: var(--primary);
             color: #fff;
             line-height: 1rem;
+            font-size: 0.625rem;
             font-weight: 700;
         }
     }
