--- a/posthog/templates/head.html
+++ b/posthog/templates/head.html
@@ -29,4 +29,8 @@
 {% endif %}
 <script id='posthog-app-user-preload'>
     window.POSTHOG_APP_CONTEXT = {{ posthog_app_context | safe }};
+    // Inject the expected location of JS bundle, use to allow the location of
+    // he bundle to be set at runtime, e.g. for PostHog Cloud we serve the
+    // frontent JS from a CDN
+    window.JS_URL = "{{ js_url|default:"" }}";
 </script>
