Update switch style

--- a/frontend/src/lib/components/LemonSwitch/LemonSwitch.scss
+++ b/frontend/src/lib/components/LemonSwitch/LemonSwitch.scss
@@ -91,6 +91,15 @@
 .LemonSwitch__wrapper {
     display: flex;
     align-items: center;
+    &--block {
+        justify-content: space-between;
+        font-weight: 600;
+        flex-grow: 1;
+        height: 3rem;
+        padding: 0 1rem;
+        border: 1px solid var(--border);
+        border-radius: var(--radius);
+    }
 }
 
 .LemonSwitch__label {
