--- a/frontend/src/lib/components/ProfilePicture/ProfilePicture.scss
+++ b/frontend/src/lib/components/ProfilePicture/ProfilePicture.scss
@@ -3,11 +3,13 @@
 .profile-package {
     display: inline-flex;
     align-items: center;
-    margin-left: 0.25rem;
+    &:not(:first-child) {
+        margin-left: 0.375rem;
+    }
 }
 
 .profile-name {
-    margin-left: 0.25rem;
+    margin-left: 0.375rem;
     font-weight: 500;
 }
 
