Rework `ShareModal` for new design

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -25,6 +25,7 @@ NOTE: $medium is a SCSS var; not a keyword
     --bg-menu: #{$bg_menu};
     --bg-mid: #{$bg_mid};
     --bg-side: #{$bg_side};
+    --bg-depth: #{$bg_depth};
     --bg-navy: #{$bg_navy};
     --bg-charcoal: #{$bg_charcoal};
     --bg-bridge: #{$bg_bridge};
