--- a/frontend/src/scenes/insights/InsightTooltip/InsightTooltip.scss
+++ b/frontend/src/scenes/insights/InsightTooltip/InsightTooltip.scss
@@ -70,6 +70,7 @@
                 font-weight: 600;
                 display: flex;
                 align-items: center;
+                height: inherit;
 
                 .ant-typography {
                     text-align: left;
