--- a/frontend/src/lib/components/MatchPropertyFilters/MatchPropertyFilters.scss
+++ b/frontend/src/lib/components/MatchPropertyFilters/MatchPropertyFilters.scss
@@ -1,5 +1,9 @@
 @import '~/vars';
 
+.and-or-filter {
+    font-weight: 500;
+}
+
 .and-or-filter-select {
     padding-top: $default_spacing / 2;
     padding-bottom: $default_spacing / 2;
