--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -201,6 +201,10 @@ body strong {
     color: $primary;
 }
 
+.primary-alt {
+    color: $primary_alt;
+}
+
 .secondary {
     font-size: 0.9em;
     letter-spacing: 1px;
