Dashboard creation modal (#8581)
* Rework dashboard creation UI to be a modal

* Update template field label

* Fix `defaultValue` typing

* Use proper field optionality indication

* Remove debug logging crap

* Add feature intro copy

* Remove nonsensical "Empty Dashboard" template

* Allow clearing template field

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -557,10 +557,6 @@ input::-ms-clear {
     }
 }
 
-.ant-form-item-label label {
-    font-weight: $medium;
-}
-
 // Button styles
 
 .btn-close {
@@ -876,6 +872,21 @@ body {
     }
     .ant-modal-content {
         box-shadow: var(--shadow-elevation);
+    }
+    .ant-form-item-label {
+        > label {
+            font-weight: 600;
+            .ant-form-item-optional {
+                font-weight: 400;
+                color: var(--muted);
+            }
+        }
+    }
+    .ant-form-item {
+        margin-bottom: 1rem;
+        &:last-child {
+            margin-bottom: 0;
+        }
     }
 }
 
