--- a/frontend/src/lib/components/LemonModal/LemonModal.scss
+++ b/frontend/src/lib/components/LemonModal/LemonModal.scss
@@ -1,13 +1,28 @@
 .LemonModal {
-    .ant-modal-body {
-        padding: 1rem;
-    }
     .ant-modal-close-x {
         position: absolute;
         top: 1rem;
         right: 1rem;
         height: 1.5rem;
         width: 1.5rem;
+    }
+    .ant-modal-header,
+    .ant-modal-body,
+    .ant-modal-footer {
+        padding: 1rem;
+    }
+    .ant-modal-header,
+    .ant-modal-footer {
+        display: flex;
+        align-items: center;
+        line-height: 1.5rem;
+        border-color: var(--border);
+    }
+    .ant-modal-title {
+        font-weight: 600;
+    }
+    .ant-modal-footer {
+        justify-content: flex-end;
     }
     section {
         width: 100%;
