Clean up the empty states

--- a/frontend/src/lib/components/InsightCard/InsightCard.scss
+++ b/frontend/src/lib/components/InsightCard/InsightCard.scss
@@ -23,6 +23,9 @@
         width: 100%;
         overflow: auto;
     }
+    .insight-empty-state {
+        font-size: 0.875rem;
+    }
 }
 
 .InsightViz {
