--- a/frontend/src/lib/components/Spinner/Spinner.scss
+++ b/frontend/src/lib/components/Spinner/Spinner.scss
@@ -6,11 +6,12 @@
     width: 32px;
     height: 32px;
     flex-shrink: 0;
+    color: var(--primary);
     .base,
     .overlay {
         display: block;
         fill: transparent;
-        stroke: var(--primary);
+        stroke: currentColor;
         stroke-width: 8px;
         transform-origin: center;
     }
