view fix and tags styling

--- a/frontend/src/lib/components/DefinitionPopup/DefinitionPopup.scss
+++ b/frontend/src/lib/components/DefinitionPopup/DefinitionPopup.scss
@@ -104,8 +104,11 @@
     }
 
     .definition-popup-tags {
+        margin: 0 !important;
+
         .ant-tag {
-            margin-top: 0 !important;
+            margin-top: 4px !important;
+            margin-bottom: 4px !important;
         }
     }
 
