Use LemonSelect for Template

--- a/frontend/src/lib/components/LemonButton/LemonButton.scss
+++ b/frontend/src/lib/components/LemonButton/LemonButton.scss
@@ -83,7 +83,8 @@
     position: relative;
     .side-button {
         position: absolute;
-        top: 0.5rem;
-        right: 0.5rem;
+        top: 1.25rem;
+        right: 1.25rem;
+        transform: translate(50%, -50%);
     }
 }
