--- a/frontend/src/lib/components/MatchPropertyFilters/MatchPropertyFilters.scss
+++ b/frontend/src/lib/components/MatchPropertyFilters/MatchPropertyFilters.scss
@@ -7,7 +7,7 @@
 .and-or-filter-select {
     padding-top: $default_spacing / 2;
     padding-bottom: $default_spacing / 2;
-    
+
     .condition-text {
         font-weight: 700;
         display: flex;
@@ -18,15 +18,14 @@
         align-items: center;
         border-radius: 4px;
         background-color: $light-grey;
-        color: $primary_alt; 
+        color: $primary_alt;
         font-size: 12px;
         &.selected {
             background-color: $primary;
             color: white;
         }
-        
     }
-    
+
     .condition-option {
         background-color: white;
         padding: $default_spacing / 2;
@@ -36,7 +35,6 @@
     }
 
     .ant-select-item-option-active:not(.ant-select-item-option-disabled) {
-        background: #E5EBFF;
-
+        background: #e5ebff;
     }
 }
