Refactor ObjectTags to use logics (#8567)

--- a/frontend/src/scenes/actions/Actions.scss
+++ b/frontend/src/scenes/actions/Actions.scss
@@ -54,6 +54,10 @@
     .action-description {
         margin-top: 1rem;
     }
+
+    .action-tags {
+        margin-top: 1rem;
+    }
 }
 
 // ActionStep
