--- a/frontend/src/lib/components/DefinitionPopup/DefinitionPopup.scss
+++ b/frontend/src/lib/components/DefinitionPopup/DefinitionPopup.scss
@@ -1,6 +1,34 @@
+.definition-popup-overlay {
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: var(--bg-depth);
+    opacity: 0.2;
+
+    &.definition-popup-overlay--enter {
+        opacity: 0;
+    }
+
+    &.definition-popup-overlay--enter-active {
+        opacity: 0.2;
+        transition: opacity 150ms;
+    }
+
+    &.definition-popup-overlay--exit {
+        opacity: 0.2;
+    }
+
+    &.definition-popup-overlay--exit-active {
+        opacity: 0;
+        transition: opacity 150ms;
+    }
+}
+
 .definition-popup {
     width: 316px;
-    padding: 0.5rem;
+    padding: 0.5rem 0.75rem 0.75rem 0.75rem;
 
     .definition-popup-header {
         display: flex;
@@ -11,6 +39,7 @@
             flex-direction: row;
             justify-content: space-between;
             margin-bottom: 4px;
+            line-height: 2rem;
 
             .definition-popup-header-row-title {
                 font-size: 11px;
@@ -23,7 +52,17 @@
             .definition-popup-header-row-buttons {
                 display: flex;
                 flex-direction: row;
-                font-size: 14px;
+                font-size: 13px;
+
+                a {
+                    user-select: none;
+                    margin-left: 16px;
+                }
+
+                .definition-popup-disabled-button {
+                    color: var(--text-muted);
+                    cursor: not-allowed;
+                }
             }
         }
 
@@ -32,11 +71,12 @@
             align-items: center;
             font-weight: 600;
             font-size: 20px;
-            line-height: 24px;
+            min-height: 24px;
             margin-bottom: 4px;
 
             svg {
                 margin-right: 8px;
+                width: 28px;
 
                 &.taxonomy-icon-muted {
                     path {
@@ -68,9 +108,19 @@
         }
     }
 
+    .definition-popup-tags {
+        margin: 0 !important;
+
+        .ant-tag {
+            margin-top: 4px !important;
+            margin-bottom: 4px !important;
+        }
+    }
+
     .definition-popup-description {
         font-weight: 400;
         margin-bottom: 4px;
+        overflow-wrap: break-word;
 
         &.empty {
             font-style: italic;
@@ -81,10 +131,6 @@
     .definition-popup-examples {
         margin-bottom: 4px;
         font-style: italic;
-    }
-
-    .ant-tag {
-        margin-top: 0 !important;
     }
 
     .definition-popup-timemeta {
@@ -135,6 +181,7 @@
                             flex-wrap: wrap;
                             align-items: center;
                         }
+
                         pre {
                             background-color: var(--bg-mid);
                             padding: 0 4px;
@@ -143,6 +190,47 @@
                             border-radius: 4px;
                         }
                     }
+                }
+            }
+        }
+    }
+
+    .definition-popup-edit-form {
+        display: flex;
+        flex-direction: column;
+
+        .label-text {
+            font-weight: 600;
+            margin-right: 4px;
+        }
+
+        .definition-popup-edit-form-label {
+            margin-bottom: 8px;
+        }
+
+        .definition-popup-edit-form-value {
+            margin-bottom: 16px;
+
+            &.definition-popup-owner-select {
+                .ant-select-selector {
+                    .ant-select-selection-placeholder {
+                        color: black;
+                        font-weight: normal;
+                    }
+                }
+            }
+        }
+
+        .definition-popup-edit-form-buttons {
+            display: flex;
+            justify-content: space-between;
+
+            .definition-popup-edit-form-buttons-secondary {
+                color: var(--primary);
+
+                &:hover,
+                &:focus {
+                    border-color: var(--primary);
                 }
             }
         }
